crates/solidity-v2/testing/snapshots/cst_output/UsingDirective/destructure_single/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.13'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/UsingDirective/destructure_single/input.sol:2:1]
   │
 2 │ using {add} for Int global;
   │ ─────────────┬─────────────  
   │              ╰─────────────── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            UsingDirective(
                UsingDirectiveStruct {
                    using_keyword: UsingKeyword {
                        range: 108..113,
                    },
                    clause: UsingDeconstruction(
                        UsingDeconstructionStruct {
                            open_brace: OpenBrace {
                                range: 114..115,
                            },
                            symbols: UsingDeconstructionSymbols {
                                elements: [
                                    UsingDeconstructionSymbolStruct {
                                        name: IdentifierPath {
                                            elements: [
                                                Identifier(
                                                    Identifier {
                                                        range: 115..118,
                                                    },
                                                ),
                                            ],
                                        },
                                        alias: None,
                                    },
                                ],
                            },
                            close_brace: CloseBrace {
                                range: 118..119,
                            },
                        },
                    ),
                    for_keyword: ForKeyword {
                        range: 120..123,
                    },
                    target: TypeName(
                        IdentifierPath(
                            IdentifierPath {
                                elements: [
                                    Identifier(
                                        Identifier {
                                            range: 124..127,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ),
                    global_keyword: Some(
                        GlobalKeyword {
                            range: 128..134,
                        },
                    ),
                    semicolon: Semicolon {
                        range: 134..135,
                    },
                },
            ),
        ],
    },
}
